--- a/index.html
+++ b/index.html
@@ -71,9 +71,31 @@
                 </div>
                 <div class="col-1-of-2">
                     <div class="composition">
-                        <img src="img/nat-1-large.jpg" alt="nature 1" class="composition__photo composition__photo--p1">
+
+                        <img srcset="img/nat-1.jpg 300w, img/nat-1-large.jpg 1000w"  
+                        sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw  ,
+                        300px"
+                        alt="nature 1"
+                        class="composition__photo composition__photo--p1"
+                        src="img/nat-1-large.jpg">
+                       
+                        <img srcset="img/nat-2.jpg 300w, img/nat-2-large.jpg 1000w"  
+                        sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw  ,
+                        300px"
+                        alt="nature 2"
+                        class="composition__photo composition__photo--p2"
+                        src="img/nat-2-large.jpg">
+
+                        <img srcset="img/nat-3.jpg 300w, img/nat-3-large.jpg 1000w"  
+                        sizes="(max-width: 56.25em) 20vw, (max-width: 37.5em) 30vw  ,
+                        300px"
+                        alt="nature 3"
+                        class="composition__photo composition__photo--p3"
+                        src="img/nat-3-large.jpg">
+
+                        <!-- <img src="img/nat-1-large.jpg" alt="nature 1" class="composition__photo composition__photo--p1">
                         <img src="img/nat-2-large.jpg" alt="nature 2 " class="composition__photo composition__photo--p2">
-                        <img src="img/nat-3-large.jpg" alt="nature 3" class="composition__photo composition__photo--p3">
+                        <img src="img/nat-3-large.jpg" alt="nature 3" class="composition__photo composition__photo--p3"> -->
                     </div>
                 </div>
             </div>
@@ -329,7 +351,12 @@
     </main>
     <footer class="footer">
         <div class="footer__logo-box">
-            <img src="/img/namrata-dark-logo.png" alt="logo box" class="footer__logo">
+
+            <picture class="footer__logo">
+                <source srcset="/img/my-namrata-logo.png" media="(max-width: 37.5em)">
+                <img srcset="/img/namrata-white-logo.png 1x, /img/namrata-dark-logo.png 2x" alt="full logo ">
+            </picture>
+
         </div>
         <div class="row">
             <div class="col-1-of-2">
